Bug 258675 - Instant Search textfield too small: "y" looks like a "v"
Summary: Instant Search textfield too small: "y" looks like a "v"
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-03 13:37 UTC by Ludwig Reiter
Modified: 2011-01-19 12:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-12-03 13:37:34 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: 20101203.1203110-1maemo1


Reproducible: Always

Steps to Reproduce:
1. Select a folder  with mails.
2. Enter "yyy"

Actual Results:  
In the instant search textfield "y" looks like "v". So the textfield is too small.

Expected Results:  
A larger textfield in which I can see the difference between v and y.
Comment 1 Tobias Koenig 2010-12-03 14:23:48 UTC
SVN commit 1203271 by tokoe:

Increase the height of the FilterLineEdit

BUG: 258675


 M  +2 -2      kdeclarativemainview_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203271
Comment 2 Ludwig Reiter 2011-01-19 12:17:02 UTC
Windows CE Mail Touch 2011-01-16 git-4d1bc61
test of description: passed.

closed.