Increase the height of the FilterLineEdit

BUG: 258675

svn path=/trunk/KDE/kdepim/mobile/; revision=1203271